# amgcl_benchmarks

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindScotch.cmake
distr_mem/: CMakeLists.txt
distr_mem/navier-stokes/: CMakeLists.txt  amgcl.cpp  amgcl_sdd.cpp  partition.cpp  run_amgcl.py  run_amgcl.sh  spc.json  trilinos.cpp
distr_mem/poisson/: CMakeLists.txt  amgcl.cpp  amgcl_sdd.cpp  petsc.cpp  run_amgcl.py  run_amgcl_strong.sh  run_amgcl_weak.sh  run_petsc.py  run_trilinos.py  run_trilinos_strong.sh  run_trilinos_weak.sh  trilinos.cpp
navier-stokes/: CMakeLists.txt
poisson/: CMakeLists.txt
shared_mem/: CMakeLists.txt  log_times.hpp
shared_mem/navier-stokes/: CMakeLists.txt  amgcl-scalar.cpp  amgcl-vexcl.cpp  amgcl.cpp  amgcl.cu  cusp.cu  petsc.cpp  schur-vexcl.cpp  schur.cpp  schur.cu  trilinos.cpp
shared_mem/poisson/: CMakeLists.txt  amgcl-vexcl.cpp  amgcl.cpp  amgcl.cu  cusp.cu  petsc.cpp  trilinos.cpp
